fix the layout on Galeria de Images for mobile version

--- a/frontend/src/styles/pages/bookDetails.css
+++ b/frontend/src/styles/pages/bookDetails.css
@@ -275,6 +275,12 @@
     width: 24px;
     height: 24px;
   }
+
+  .book-details-image-container {
+    height: 51vh;
+  }
+
+  
 }
 
 /* Book info styles */
