add new button to BookDetails page, add new course to course.tsx, fix the logo border to dissapear when clicked

--- a/frontend/src/styles/navigation.css
+++ b/frontend/src/styles/navigation.css
@@ -50,6 +50,12 @@
   display: flex;
   align-items: center;
   text-decoration: none;
+  
+}
+
+.navbar-logo a:focus {
+  outline: none;
+  
 }
 
 .logo-img {
