--- a/frontend/src/styles/pages/courseDetails.css
+++ b/frontend/src/styles/pages/courseDetails.css
@@ -1155,6 +1155,17 @@ body {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
 /* Partner logos styling */
 .partner-logos {
   position: absolute;
@@ -1206,12 +1217,16 @@ body {
   .partner-logos-container {
     gap: 5px;
     margin-bottom: 5rem;
+    max-height: 700px;
+    max-width: fit-content;
   }
 
   .partner-logo {
     max-height: 545px;
     margin-top: 6rem;
-    border: 2px solid red;
+    display: flex;
+    justify-content: space-around;
+    margin-left: 5rem;
     
   }
 
@@ -1240,6 +1255,17 @@ body {
 
 }
 
+@media (max-width: 820px) {
+  .partner-logos-container {
+    gap: 15px;
+  }
+}
+
+  .partner-logo {
+    max-height: 200px;
+    margin-left: 1rem;
+  }
+
 
 
 @media (max-width: 768px) {
@@ -1248,7 +1274,8 @@ body {
   }
   
   .partner-logo {
-    max-height: 50px;
+    max-height: 170px;
+    margin-left: 1rem;
   }
 }
 
@@ -1260,17 +1287,27 @@ body {
   
   .partner-logo {
     max-height: 205px;
+    margin-right: -1em;
+    padding: 1px;
+    margin-top: -8rem;
+    
   }
 }
+
+
 
 @media (max-width: 540px) {
   .partner-logos-container {
     flex-direction: column;
     gap: 1px;
+    
   }
 
   .partner-logo {
     max-height: 320px;
+    margin-left: 1rem;
+    margin-top: -8rem;
+    
     
   }
 
@@ -1283,7 +1320,7 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
-    max-width: 130px;
+    max-width: 155px;
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
