--- a/frontend/src/styles/stripeCancel.css
+++ b/frontend/src/styles/stripeCancel.css
@@ -7,6 +7,7 @@ cancelled-container {
     background-color: #f8f9fa;
     padding: 20px;
     position: relative;
+    margin-top: -5rem;
   }
   
   .cancelled-card {
